--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2 class="title">About Me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="images/profile-1.jpeg" alt="">
+                    <img src="images/profile-1.JPEG" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Shazana and I'm a <span class="typing-2"></span></div>
