--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="text">I'm Shazana and I'm a <span class="typing-2"></span></div>
                     <p>I am a fresh graduate from Universiti Teknikal Malaysia Melaka. 
                         A degree holder in Computer Science (Artificial Intelligence) with honours. I am currently 
-                        work as a Content Assistant Manager where I was assigned to uploads content to a company website. 
+                        work as a Assistant Content Manager where I was assigned to uploads content to a company website. 
                         As part of my job duties, I also track and report website traffic from Google Analytics. Other 
                         than that, I enhance my basic skill in photo and video editing during my free time.</p>
                     <a href="https://drive.google.com/file/d/1FlJpL-m1P09TL21lGvIzOU2q6otAprU-/view?usp=sharing" target="_blank">Download CV</a>
@@ -117,7 +117,7 @@
                         
                         After finish my studies, I worked as a substitute teacher for 3 months under MySTEP programme. 
                         I was instructed to teach English subjects, History and Technological Design (RBT). I started 
-                        worked as a Content Assistant Manager right after I finished my contract as a subtitute teacher.
+                        working as a Assistant Content Manager right after I finished my contract as a subtitute teacher.
                     </p>
                 </div>
                 <div class="column right">
