--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <div class="column right">
                     <div class="text">I'm Shazana and I'm a <span class="typing-2"></span></div>
                     <p>I am a fresh graduate from Universiti Teknikal Malaysia Melaka. 
-                        A degree holder in Computer Science (Artificial Intelligence) with honours. I am currently 
-                        work as a Assistant Content Manager where I was assigned to uploads content to a company website. 
+                        A degree holder in Computer Science (Artificial Intelligence) with honors. As an Assistant Content 
+                        Manager where I was assigned to uploads content to a company website. 
                         As part of my job duties, I also track and report website traffic from Google Analytics. Other 
                         than that, I enhance my basic skill in photo and video editing during my free time.</p>
                     <a href="https://drive.google.com/file/d/1FlJpL-m1P09TL21lGvIzOU2q6otAprU-/view?usp=sharing" target="_blank">Download CV</a>
@@ -77,7 +77,7 @@
                 <div class="card">
                     <div class="box">
                         <div class="text">Dental Clinic Management System</div><br>
-                        <p>Dental Clinic Management System is a system helps to reduce the problem of losing patients’ data 
+                        <p>The Dental Clinic Management System is a system helps to reduce the problem of losing patients’ data 
                             and clinical information. It also provides the facility to record and store patient data 
                             systematically.</p>
                     </div>
@@ -86,7 +86,7 @@
                     <div class="box">
                         <div class="text">PetCare.AI</div><br>
                         <p>Pet feeding is always a major concern while you are away. Worry not! PetCare.AI provides a 
-                            solution to your concerns. It comes with face detection to detect your adorable cat face and
+                            solution to your concerns. It comes with face detection to detect your adorable cat face
                             and dispense food automatically.</p>
                     </div>
                 </div>
@@ -115,9 +115,9 @@
                         example, develop an UI and database tables, designing ERD and posters, scraping data from websites and analyzing
                         raw data. <br><br>
                         
-                        After finish my studies, I worked as a substitute teacher for 3 months under MySTEP programme. 
+                        After finishing my studies, I worked as a substitute teacher for 3 months under MySTEP programme. 
                         I was instructed to teach English subjects, History and Technological Design (RBT). I started 
-                        working as a Assistant Content Manager right after I finished my contract as a subtitute teacher.
+                        working as an Assistant Content Manager right after I finished my contract as a substitute teacher.
                     </p>
                 </div>
                 <div class="column right">
