--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <img src="images/profile-1.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Shazana and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Shazana and I'm an Asisstant Content Manager</span></div>
                     <p>I am a fresh graduate from Universiti Teknikal Malaysia Melaka. 
                         A degree holder in Computer Science (Artificial Intelligence) with honors. As an Assistant Content 
                         Manager where I was assigned to uploads content to a company website. 
