--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                     <img src="images/profile-1.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Shazana, an Asisstant Content Manager</span></div>
+                    <div class="text">I'm Shazana, a Website Manager</span></div>
                     <p>I am a fresh graduate from Universiti Teknikal Malaysia Melaka. 
-                        A degree holder in Computer Science (Artificial Intelligence) with honors. As an Assistant Content 
-                        Manager where I was assigned to uploads content to a company website. 
+                        A degree holder in Computer Science (Artificial Intelligence) with honors. As a Website 
+                        Manager, I was assigned to uploads content to a company website. 
                         As part of my job duties, I also track and report website traffic from Google Analytics. Other 
                         than that, I enhance my basic skill in photo and video editing during my free time.</p>
                     <a href="https://drive.google.com/file/d/1FlJpL-m1P09TL21lGvIzOU2q6otAprU-/view?usp=sharing" target="_blank">Download CV</a>
