--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         
                         After finishing my studies, I worked as a substitute teacher for 3 months under MySTEP programme. 
                         I was instructed to teach English subjects, History and Technological Design (RBT). I started 
-                        working as an Assistant Content Manager right after I finished my contract as a substitute teacher.
+                        working as a Website Manager right after I finished my contract as a substitute teacher.
                     </p>
                 </div>
                 <div class="column right">
